testdata/fixtures/negative/public-api-record/pkg/axle/record.go
package axle

type Record map[string]any
